WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53046
Don't use the timeout checker for non-user-interaction messages
https://bugs.webkit.org/show_bug.cgi?id=53046
Summary
Don't use the timeout checker for non-user-interaction messages
Anders Carlsson
Reported
2011-01-24 15:09:11 PST
Don't use the timeout checker for non-user-interaction messages
Attachments
Patch
(2.66 KB, patch)
2011-01-24 15:09 PST
,
Anders Carlsson
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-01-24 15:09:27 PST
Created
attachment 79980
[details]
Patch
Anders Carlsson
Comment 2
2011-01-24 15:16:33 PST
Committed
r76550
: <
http://trac.webkit.org/changeset/76550
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug