2011-01-24  Anders Carlsson  <andersca@apple.com>

Reviewed by John Sullivan.

        Don't use the timeout checker for non-user-interaction messages
        https://bugs.webkit.org/show_bug.cgi?id=53046

        * UIProcess/ChunkedUpdateDrawingAreaProxy.cpp:
        (WebKit::ChunkedUpdateDrawingAreaProxy::didSetSize):
        (WebKit::ChunkedUpdateDrawingAreaProxy::sendSetSize):
        * UIProcess/LayerBackedDrawingAreaProxy.cpp:
        (WebKit::LayerBackedDrawingAreaProxy::sizeDidChange):
        (WebKit::LayerBackedDrawingAreaProxy::didSetSize):


git-svn-id: svn://svn.chromium.org/blink/trunk@76550 bbb929c8-8fbe-4397-9dbb-9b2b20218538