third_party/WebKit/Source/WebKit2/UIProcess/ChunkedUpdateDrawingAreaProxy.cpp
@@ -114,9 +114,6 @@ void ChunkedUpdateDrawingAreaProxy::didSetSize(UpdateChunk* updateChunk)
     invalidateBackingStore();
     if (!updateChunk->isEmpty())
         drawUpdateChunkIntoBackingStore(updateChunk);
-
-    WebPageProxy* page = this->page();
-    page->process()->responsivenessTimer()->stop();
 }
 
 void ChunkedUpdateDrawingAreaProxy::update(UpdateChunk* updateChunk)
@@ -144,7 +141,6 @@ void ChunkedUpdateDrawingAreaProxy::sendSetSize()
         return;
     m_isWaitingForDidSetFrameNotification = true;
     
-    m_webPageProxy->process()->responsivenessTimer()->start();
     m_webPageProxy->process()->send(DrawingAreaLegacyMessage::SetSize, m_webPageProxy->pageID(), CoreIPC::In(info().identifier, m_size));
 }
     
