third_party/WebKit/Source/WebKit2/UIProcess/LayerBackedDrawingAreaProxy.cpp
@@ -81,7 +81,6 @@ void LayerBackedDrawingAreaProxy::sizeDidChange()
 
     m_isWaitingForDidSetFrameNotification = true;
 
-    page->process()->responsivenessTimer()->start();
     page->process()->send(DrawingAreaLegacyMessage::SetSize, page->pageID(), CoreIPC::In(info().identifier, m_size));
 }
 
@@ -120,9 +119,6 @@ void LayerBackedDrawingAreaProxy::didSetSize(const IntSize& size)
 
     if (size != m_lastSetViewSize)
         setSize(m_lastSetViewSize);
-
-    WebPageProxy* page = this->page();
-    page->process()->responsivenessTimer()->stop();
 }
 
 void LayerBackedDrawingAreaProxy::update()
